<resources>
    <string name="app_name">MovieInfo</string>
    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="you_can_search_any_actor">You can search any actor</string>
    <string name="close">close</string>
    <string name="search_suggestions">Search Suggestions</string>
    <string name="double_qoute">\&quot;</string>
    <string name="there_is_no_result">There is no result</string>
    <string name="details">Details</string>
    <string name="actors">Actors</string>

</resources>
